[tool.poetry]
name = "galaga"
version = "0.1.0"
description = ""
authors = ["David Weinberg"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "1.9.6"
pgzero = "^1.2"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
